Overflow y fix

--- a/public/reset.css
+++ b/public/reset.css
@@ -33,7 +33,7 @@ html:focus-within {
 /* Set core body defaults */
 body {
   min-height: 90vh;
-  min-height: 100dvh;
+  min-height: 90dvh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 }
